@@ -4,6 +4,7 @@ Changes for 1.3.0:
 * New feature: Build option `SOFTTIMERS_BUILD_TEST` to enable/disable building SoftTimers unit tests.
 * New feature: Build option `SOFTTIMERS_BUILD_EXAMPLES` to enable/disable building SoftTimers examples.
 * New feature: Changed file/folder structure to be compatible with Arduino Library Manager.
+* New feature: Using RapidAssist 0.5.0 and win32Arduino 2.3.1.
 
 Changes for 1.2.0:
 
